crates/swc_ecma_parser/tests/test262-error-references/fail/ab9d14c2ef38f180.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/ab9d14c2ef38f180.js:1:1
  |
1 | (0, {a = 0}) = 0
  | ^^^^^^^^^^^^

error: assignment property is invalid syntax
 --> $DIR/tests/test262-parser/fail/ab9d14c2ef38f180.js:1:6
  |
1 | (0, {a = 0}) = 0
  |      ^^^^^

